# PulseAPI

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  eslint.config.ts  package-lock.json  package.json  test.http
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yaml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/adapters/: cli.rs  tauri.rs
src-tauri/src/api/: handlers.rs  log.rs  mod.rs  recent.rs  state.rs
src-tauri/src/cli/: commands.rs  mod.rs  runner.rs
src-tauri/src/core/: mod.rs  request.rs  response.rs  runner.rs  test.rs
src-tauri/src/domain/: executor.rs  load_test.rs  mod.rs  models.rs
src-tauri/src/formats/: cli.rs  file.rs
src-tauri/src/parser/: http_file.rs  mod.rs
src/api/: file.api.ts  groups.api.ts  load-test.api.ts  log.api.ts  requests.api.ts  variables.api.ts
src/components/common/: CollapsibleSection.tsx  DropdownButton.tsx  VariableInput.tsx
src/components/editors/: CodeEditor.tsx  JsonEditor.tsx  KeyValueEditor.tsx  RawEditor.tsx  XmlEditor.tsx
src/components/layout/: RequestEditor.tsx  (+2 more)
src/constants/: subtitles.ts  urls.ts
src/hooks/: useDebouncedEffect.ts  useDragAndDrop.ts  useGroups.ts  useHotKey.ts  useLoadTest.ts  useRequests.ts  useResizable.ts  useVariables.ts
src/screens/: Home.tsx  Workspace.tsx
src/styles/: variables.css
src/types/: groups.ts  http.ts  load-test.ts  response.ts  screens.ts
src/utils/: randomSubtitle.ts  randomUrl.ts  requestUtils.ts
(+37 files in other folders)
