[package]
name = "PulseAPI"
version = "0.1.0"
description = "A lightweight desktop client for executing and managing HTTP requests stored in plain .http files."
authors = ["NikitaBerezhnyj"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-all", "http-all", "dialog-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.1", features = ["json", "blocking"] }
clap = { version = "4.0.32", features = ["derive"] }
regex = "1.10"
indicatif = "0.18.3"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
